[project]
name = "nonebot-plugin-eventexpiry"
version = "0.1.0"
description = "NoneBot2 event expiry filter"
authors = [
    {name = "Akirami", email = "Akiramiaya@outlook.com"},
]
license = {text = "MIT"}
dependencies = ["nonebot2>=2.0.0", "nonebot-adapter-onebot>=2.2.3"]
requires-python = ">=3.8"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/A-kirami/nonebot-plugin-eventexpiry"
Repository = "https://github.com/A-kirami/nonebot-plugin-eventexpiry"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
